@@ -76,6 +76,8 @@ Miscellaneous
 - `FiniteElementSpace` has new methods to directly set prolongation and
   restriction operators to arbitrary sparse matrices.
 
+- There are new convenience constructors for NURBS patches and knot vectors.
+
 API changes
 -----------
 - API change: in class GridFunction, 'fec' was renamed to 'fec_owned'.
